syntax = "proto3";

package live;

option go_package = "github.com/VaheMuradyan/Live/proto;live";

service CoefficientService {
  rpc StartSportUpdates(SportRequest) returns (SportResponse);
  rpc StartEvents(EventRequest) returns (EventResponse);
}

message SportRequest {
  string sport = 1;
  uint32 update_interval_seconds = 2;
}

message SportResponse {
  bool success = 1;
  string message = 2;
  string sport = 3;
}

message EventRequest {
  string event = 1;
  uint32 score_update_time = 2;
  string sportName = 3;
}

message EventResponse{
  bool success = 1;
}
